// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 jAYccg"
  data-cy="test-hero"
>
  <div
    className="hero___StyledDiv-sc-qftwzr-4 jdjFHP"
  >
    <div
      className="hero___StyledDiv2-sc-qftwzr-5 bBCSWu"
    >
      <p
        className="hero___StyledP-sc-qftwzr-7 lhlKbH"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv3-sc-qftwzr-8 fXtyXL"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 jAYccg"
  data-cy="undefined-hero"
>
  <div
    className="hero___StyledDiv-sc-qftwzr-4 cdZOdX"
  >
    <div
      className="hero___StyledDiv2-sc-qftwzr-5 bBCSWu"
    >
      <p
        className="hero___StyledP-sc-qftwzr-7 lhlKbH"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv3-sc-qftwzr-8 fXtyXL"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
  </div>
</section>
`;
